Fix Windows build scripts

--- a/02_MLIR_gen_pyvars/CMakeLists.txt
+++ b/02_MLIR_gen_pyvars/CMakeLists.txt
@@ -56,6 +56,7 @@ target_link_libraries(py39compiler PRIVATE ${LIBS})
 target_include_directories(py39compiler PRIVATE ${Python_INCLUDE_DIRS})
 target_link_directories(py39compiler PRIVATE ${Python_LIBRARY_DIRS})
 target_link_libraries(py39compiler PRIVATE ${Python_LIBRARIES})
+message(STATUS "Python_RUNTIME_LIBRARY_DIRS: ${Python_RUNTIME_LIBRARY_DIRS}")
 message(STATUS "Python_LIBRARIES: ${Python_LIBRARIES}")
 
 if (MSVC)
@@ -66,7 +67,7 @@ if (MSVC)
         vcruntime140_1.dll
     )
     foreach(f ${Python_DLLs})
-        set(src ${Python_ROOT_DIR}/${f})
+        set(src ${Python_RUNTIME_LIBRARY_DIRS}/${f})
         set(dst ${CMAKE_BINARY_DIR}/bin/${f})
         message(STATUS "Copying file ${f} ...")
         configure_file(${src} ${dst} COPYONLY)
